删除了部分组件
删除了部分组件，主要替换了MKSaas

--- a/content/blog/internationalization.mdx
+++ b/content/blog/internationalization.mdx
@@ -5,7 +5,7 @@ image: /images/blog/post-3.png
 date: "2025-03-15"
 published: true
 categories: [company, product]
-author: mksaas
+author: watermarkremovertools
 ---
 
 <Callout title='Before you get started'>
