--- a/content/blog/search.zh.mdx
+++ b/content/blog/search.zh.mdx
@@ -5,7 +5,7 @@ image: /images/blog/post-6.png
 date: "2025-02-15"
 published: true
 categories: [company, news]
-author: mksaas
+author: watermarkremovertools
 ---
 
 Fumadocs UI 为您的文档提供了一个美观的搜索界面，而搜索功能则由 Fumadocs Core 提供和记录。
