--- a/content/category/product.mdx
+++ b/content/category/product.mdx
@@ -1,4 +1,4 @@
 ---
 name: Product
-description: Products and services powered by MkSaaS
+description: Products and services powered by WatermarkRemoverTools
 ---
