--- a/content/blog/fumadocs.mdx
+++ b/content/blog/fumadocs.mdx
@@ -5,7 +5,7 @@ image: /images/blog/post-8.png
 date: "2025-03-28"
 published: true
 categories: [company, news]
-author: mksaas
+author: watermarkremovertools
 ---
 
 ## Introduction
