--- a/content/blog/search.mdx
+++ b/content/blog/search.mdx
@@ -5,7 +5,7 @@ image: /images/blog/post-6.png
 date: "2025-02-15"
 published: true
 categories: [company, news]
-author: mksaas
+author: watermarkremovertools
 ---
 
 Fumadocs UI provides a good-looking search UI for your docs, the search functionality is instead provided and documented on Fumadocs Core.
